<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, IMPS</string>
    <string name="app_name">IMPS</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string> 
    <string name="strPswInputLabel">密码</string> 
    <string name="opt_remember">记住密码</string> 
    <string name="auto_login">自动登录</string>
    <string name="login">登 录</string>
    <string name="sign_up">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="password_again">确认密码</string>
    <string name="email">邮箱</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="login_loading">正在登陆，请稍候...</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="friend">好友</string>
    <string name="currentsession">对话</string>
    <string name="sysmsg">系统信息</string>
    <string name="map">地图</string>
    <!-- register -->
    <string name="register_warning">提示</string>
    <string name="register_lack">注册信息不能有空项</string>
    <string name="register_2pwd_not_valid">两次密码不一致</string>
    <string name="register_user_exist">用户名已存在，请重新填写一个用户名</string>
    <string name="net_problem">当前网络状态不佳，请稍后重试</string>
    <string name="register_success">注册成功，请返回登录</string>
    <string name="register_fail">注册失败</string>
    <string name="network_unavailable">网络暂不可用，请确保手机已连接到网络</string>
    <string name="register_sent">注册申请中...</string>
    
    <!-- Login -->
	<string name="login_error">登录错误</string>
	<string name="login_username_required">请输入用户名</string>
	<string name="login_password_required">请输入密码</string>
	<string name="login_username_password_error">登录错误：用户名或密码错误</string>
	<string name="login_account_at_other_place">账户已在别处登录</string>
	<string name="login_unknown_error">登录出错</string>
	<string name="login_net_error">网络错误</string>
	<string name="login_success">登录成功</string>
	
	<string name="about">关于</string>
	<string name="about_copyright" formatted="false">
					\t\t\t\t\t\t\t\t\t关于IMPS	\n 
					\tIMPS是一款交友社区类与生活应用类紧密结合在一起的基于地理位置的实时互动通信应用。
				IMPS用户能够基于位置服务进行基于CS模式的包括文字、图片、语音对讲机在内的聊天实时互
				动和基于P2P模式的多媒体通讯（包括视频共享，语音视频通讯等），并能够使用手写与涂鸦分
				享功能增加互动的趣味性。另外还能让用户利用移动设备上的多种定位手段来获取更丰富的位置
				信息服务。\n
					\tIMPS构建了一个基于多协议（包括tcp,udp,rtp等）的多媒体传输基础架构服务，能够作为平台服
				务为不同程序提供多媒体传输与处理服务。在媒体处理上实现了用PCMU编解码音频，用H264、H263
				压缩率很高、在工业界得到广泛认可的算法编解码视频的功能，同时在服务通信并发进行了很大的优化。\n
					\tIMPS主要具有如下特点：\n
					\t1. 构建了一个基于多协议（包括tcp,udp,rtp等）的多媒体传输基础架构服务，能够作为平台服务为
				不同程序提供多媒体传输与压缩处理服务。\n
				   \t2. 实现了一个拓展型NIO服务通信框架，对通信并发进行了较多优化。\n
					\t3. 具备基于手机设备的多种自适应定位（GPS、基站定位、wifi定位）功能。\n
					\t4. 具备基于手机地理位置的包括文字、图片、语音、视频等在内的即时通信功能，融合了社区交友与生活
				元素，实现趣味性互动。\n
	</string>
	
	<string name="sysMsg">系统信息</string>
		<!--chatView-->
	<string name="chat_title">与 %1$s 聊天中</string>
	<string name="chat_system_tip">系统提示</string>
	<string name="audio_data_send_success">音频发送成功</string>
	<string name="online">在线</string>
	<string name="offline">离线</string>
	<string name="add_new_fri">添加好友</string>
    <string name="exit">退出程序</string>
    <string name="setting">设置</string>
    
    <string name="unsort_group">未分组</string>
	<string name="friend_group">我的好友</string>
	<string name="family_group">家人</string>
	<string name="colleague_group">同事</string>
	<string name="classmate_group">同学</string>
	
	<string name="assistor">IMPS小助手</string>
	<string name="launch_main">主页面</string>
	<string name="close">关闭</string>
	<string name="replay">回复</string>
	<string name="newSms">新信息</string>
    <string name="newSmsFrom">来自%1$s的新信息</string>
    <string name="empty_sms_warning">不能发送新信息...</string>
    <string name="sending">正在发送...</string>
    <string name="sms_send_success">信息发送成功</string>
    <string name="sms_friend_not_login">对方不在线，信息将在对方在线时发送</string>
    <string name="friend_reject">对方拒绝接收</string>
    <string name="sms_send_fail">发送失败</string>
    <string name="image_send_success">图片发送成功</string>
    <string name="friend_offline">对方不在线</string>
    <string name="net_error">网络出错</string>
    
	<string name="hand_write_gesture">手写板</string>
    <string name="hand_write_graffiti">涂鸦板</string>
    
    <string name="graffiti_color">颜色</string>
	<string name="graffiti_highlight">高亮</string>
	<string name="graffiti_bold">模糊</string>
	<string name="graffiti_eraser">橡皮</string>
	<string name="graffiti_trace">凸痕</string>
	<string name="graffiti_clear">清除</string>
	<!-- audioChat -->
	<string name="audio_chat_title">与 %1$s 语音通话</string>
	<string name="audio_status_ready">准备中 </string>
	<string name="audio_status_cancel">已取消 </string>
	<string name="audio_status_start">正在通话中 </string>
	<string name="audio_status_exit">正在退出 </string>
	<string name="audio_status_reject">对方拒绝您的语音通话请求 </string>
	<string name="audio_chat_request_title">语音通讯请求</string>
	<string name="audio_chat_request_message">是否接受 %1$s 的语音通话请求？</string>
	<string name="audio_chat_request_notify">请求与您语音聊天</string>
	<string name="net_problem_and_retrying"> 当前网络不可用，正在重试...</string>
	<string name="audio_exit_warning">您确定退出当前语音通话？</string>
	<!--Video Chat-->
	<string name="unknow_request">无法解析的用户请求</string>
	<string name="video_chat_title">与 %1$s 视频通话</string>
	<string name="video_chat_request_notify">请求与您视频聊天</string>
	<string name="video_request_reject">对方拒绝了您的通话请求</string>
	<string name="video_chat_request_title">视频通话请求</string>
	<string name="video_chat_request_message">是否接受 %1$s 的视频通话请求？</string>
	
	<string name="search_friend_hint">输入好友名或关键字</string>
	<string name="find_nearby_friend">查找附近朋友</string>
	<string name="recommend_friend">推荐好友</string>
	<string name="search_friend">查找好友</string>
	<string name="whether_add_new_friend">添加 %1$s 为好友？</string>
	<string name="add_friend_req_sent">好友请求已发送</string>
	<string name="add_friend_rsp_sent">好友回应已发送</string>
	<string name="add_friend_req_notify">%1$s 请求添加您为好友</string>
	<string name="add_friend_denied">已拒绝 %1$s 的好友请求</string>
	<string name="add_friend_accepted">已接受 %1$s 的好友请求</string>
	<string name="add_friend_rsp_denied">%1$s已拒绝 您的的好友请求</string>
	<string name="add_friend_rsp_accepted">%1$s已接受您的好友请求</string>
	<string name="accept">接受</string>
	<string name="accepted">已接受</string>
	<string name="deny">拒绝</string>
	<string name="denied">已拒绝</string>
	<string name="new_image_received_from_friend">%1$s 发来图片</string>
	<string name="new_audio_received_from_friend">%1$s 发来语音</string>
	
	<string name="exit_warning">退出后将无法接收信息,确定退出程序？</string>
	<string name="friendlist">我的好友</string>
	<string name="findfriend">找朋友</string>
	<string name="friendlocation">好友位置</string>
	<string name="mylocation">我的轨迹</string>
	
	<string name="myvalidlocation">我的精确位置</string>
	<string name="friendactivity">好友动态</string>
	<string name="nearbyactivity">附近动态</string>
	<string name="emptymap">不加载地图数据</string>
	<string name="checkin">签到</string>
	
	<string name="iamhear">我在这里</string>
	<string name="card">名片设置</string>
	<string name="longitude">经度</string>
	<string name="latitude">纬度</string>
	<string name="addressnotavailable">暂时无法获取位置</string>
	<string name="locatedat">位于</string>
	<string name="positioning_unavailable">暂时无法获取您的位置</string>
	<string name="loading_your_address">正在加载您的地址信息</string>
	<string name="loading_your_address_fail">获取您的地理位置信息失败</string>
	<string name="street_view">街景模式</string>
	<string name="traffic_view">交通流量</string>
	<string name="satellite_view">卫星视图</string>
	<string name="select_mapview_mode">请选择地图模式</string>
	<string name="lastupdatetime">更新时间</string>
	<string name="friendlocation_loading">正在加载好友位置</string>
	<string name="chooseGender">请选择性别</string>
	<string name="update_email">请输入邮箱地址</string>
	<string name="updateEmailTitle">更改邮箱</string>

	<string name="invitefriend">邀请好友</string>
	<string name="invition_sending">正在发送邀请</string>
	<string name="invition_failed">发送邀请失败</string>
	<string name="invition_success">邀请已发送</string>
	
	<string name="not_connected">未连接</string>
	<string name="connected">已连接</string>
	<string name="roommaster">房主:%1$s</string>
	<string name="couplelist">用户列表:</string>
	<string name="friend_invite_you_for_coupledoodle">好友%1$s邀请您一起玩CoupleDoodle</string>
	<string name="friend_rsp_yourinvite">好友%1$s %2$s了您的邀请</string>
	<string name="sns">云社交</string>
	<string name="coupledoodle">Couple Doodle</string>
	<string name="select_friends">选择好友</string>
	<string name="accept_friend_sysmsg"> 接受了您的添加好友请求</string>
	<string name="deny_friend_sysmsg"> 拒绝了您的添加好友请求</string>
	<string name="receive_friend_sysmsg"> 向您发来了添加好友请求</string>
	<string name="goto_sysmsg">【进入系统消息查看】</string>
	<string name="default_smiley">默认</string>
	<string name="emoji_smiley">Emoji</string>
	<string name="replay_msg">回复信息</string>
</resources>
