<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/blue"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:paddingTop="5dip"
		android:paddingBottom="5dip"
		android:paddingLeft="10dip"
		android:paddingRight="10dip"
		>
		<TextView
			android:id="@+id/view_appName"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:gravity="left"
			android:textColor="@color/black"
			android:textSize="18sp"
		/>
		<TextView
			android:id="@+id/popup_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/newSmsFrom"
			android:gravity="center"
			android:paddingRight="10dip"
			android:textColor="@color/black"
			android:textSize="18sp"
		>	
		</TextView>
		
		    <TextView
			android:id="@+id/popup_content"
			android:layout_width="fill_parent"
			android:layout_height="100dip"
			android:text="@string/hello"
			android:gravity="center"
			android:textColor="@color/black"
			android:textSize="14sp"
			>	
			</TextView>
			<EditText
				android:id="@+id/popup_replaymsg"
				android:gravity="top"
				android:layout_width="fill_parent"
				android:layout_height="50dip"
				android:scrollHorizontally="true"
				android:hint="回复信息"
				>
			</EditText>
			
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="right"
				android:paddingTop="5dip"
			>
			<Button
				android:id="@+id/popup_launchMain"
				android:textSize="12sp"
				android:layout_gravity="right"
				android:layout_width="80dip"
				android:layout_height="wrap_content"
				android:minHeight="40dip"
				android:text="@string/launch_main"
				android:textColor="@color/white"
				android:background="@color/grey"
				/>		
			<Button
				android:id="@+id/popup_closePopupmsg"
				android:textSize="12sp"
				android:layout_gravity="right"
				android:layout_width="80dip"
				android:layout_height="wrap_content"
				android:minHeight="40dip"
				android:text="@string/close"
				android:textColor="@color/white"
				android:background="@color/grey"
				/>
				<Button
				android:id="@+id/popup_msgReplay"
				android:textSize="12sp"
				android:layout_gravity="right"
				android:layout_width="80dip"
				android:layout_height="wrap_content"
				android:minHeight="40dip"
				android:text="@string/replay"
				android:textColor="@color/white"
				android:background="@color/grey"
				>
				</Button>
			</LinearLayout>
	</LinearLayout>
</ScrollView>
