<?xml version="1.0" encoding="UTF-8"?>
<TabHost android:id="@android:id/tabhost" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:id="@android:id/tabcontent" android:layout_width="fill_parent" 
            android:layout_height="0.0dip" android:layout_weight="1.0" />
        <android.widget.TabWidget android:id="@android:id/tabs" android:visibility="gone" 
            android:layout_width="fill_parent" android:layout_height="wrap_content" 
            android:layout_weight="0.0" />
        <RadioGroup android:gravity="center_vertical" android:layout_gravity="bottom" 
            android:orientation="horizontal" android:id="@+id/tab_navigator" android:background="@drawable/tab_navigator_bg" 
            android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:id="@+id/radio_friendlist" android:tag="radio_friendlist" android:layout_marginTop="2.0dip" 
                android:text="@string/friend" android:drawableTop="@drawable/icon_friendlist" style="@style/main_tab_bottom" />
            <RadioButton android:id="@+id/radio_currentsession" android:tag="radio_currentsession" android:layout_marginTop="2.0dip" 
                android:text="@string/currentsession" android:drawableTop="@drawable/current_talk" style="@style/main_tab_bottom" />
            <RadioButton android:id="@+id/radio_sysmsg" android:tag="radio_sysmsg" android:layout_marginTop="2.0dip" 
                android:text="@string/sysmsg" android:drawableTop="@drawable/icon_friendlist" style="@style/main_tab_bottom" />
            <RadioButton android:id="@+id/radio_map" android:tag="radio_map" android:layout_marginTop="2.0dip" 
                android:text="@string/map" android:drawableTop="@drawable/icon_friendlist" style="@style/main_tab_bottom" />
            </RadioGroup>
    </LinearLayout>
</TabHost>