<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout android:orientation="vertical" android:id="@+id/loginRoot"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1.0" android:background="@drawable/default_bg">
		<RelativeLayout android:id="@+id/RelativeLayout02"
			android:background="@drawable/login_back" android:paddingTop="21.0px"
			android:paddingBottom="10.0px" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="15.0px"
			android:layout_marginTop="62.0px" android:layout_marginRight="15.0px">
			<ImageView android:id="@+id/faceImg" android:background="@drawable/login_head"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<EditText android:id="@+id/login_edit_account"
				android:background="@drawable/login_edit" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginLeft="5.0dip"
				android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip"
				android:layout_marginBottom="5.0px" android:hint="@string/strInputAccHint"
				android:maxLength="10" android:layout_toRightOf="@+id/faceImg"
				android:layout_alignParentTop="true"/>
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView01"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="15.0sp"
				android:text="@string/strAccInputLabel" android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignTop="@+id/login_edit_account"
				android:layout_alignBottom="@+id/login_edit_account" />
			<ImageButton android:id="@+id/ImageButton02"
				android:background="@drawable/more_select" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:layout_alignTop="@+id/login_edit_account"
				android:layout_alignRight="@+id/login_edit_account"
				android:layout_alignBottom="@+id/login_edit_account" />
			<EditText android:id="@+id/login_edit_pwd"
				android:background="@drawable/login_edit" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:maxLength="16" android:layout_below="@+id/login_edit_account"
				android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignRight="@+id/login_edit_account"
				android:inputType="textPassword" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView02"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/strPswInputLabel"
				android:layout_alignTop="@+id/login_edit_pwd"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/login_edit_pwd" />
			<CheckBox android:textSize="16.0sp" android:textColor="#ff222222"
				android:id="@+id/login_cb_savepwd" android:paddingLeft="25.0px"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:checked="true" android:button="@drawable/login_btn_check"
				android:text="@string/opt_remember" 
				android:layout_alignLeft="@+id/TextView02"
				android:layout_below="@+id/TextView02" />
			<CheckBox android:textSize="16.0sp" android:textColor="#ff222222"
				android:id="@+id/login_auto" android:paddingRight="5.0px"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:checked="true" android:button="@drawable/login_btn_check"
				android:text="@string/auto_login" 
				android:layout_alignRight="@+id/TextView02"
				android:layout_alignParentRight="true"
				android:layout_below="@+id/TextView02" />
			<Button android:id="@+id/register_btn_login"
				android:layout_width="120.0px" android:layout_height="wrap_content"
				android:layout_marginTop="7.0px" android:layout_marginLeft="12.0dip"
				android:text="@string/sign_up" android:layout_below="@+id/login_cb_savepwd"
				android:layout_alignParentLeft="true" />
			<Button android:id="@+id/login_btn_login"
				android:layout_width="120.0px" android:layout_height="wrap_content"
				android:layout_marginTop="7.0px" android:layout_marginRight="8.0dip"
				android:text="@string/login" android:layout_below="@+id/login_cb_savepwd"
				android:layout_alignParentRight="true" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>